# dnd5e_character_creator

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Character/: BaseCharacter.cpp  BaseCharacter.h  Classes.h  Races.h  RacialStatsCharacter.cpp  RacialStatsCharacter.h  Stats.h
tests/: CMakeLists.txt  TestBaseCharacter.cpp  TestRacialStatsCharacter.cpp  Tests.cpp
